sistema/archivos/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: claumanrique
    labels:
      tipo: desarrollo
