sistema/archivos/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-servicio
  labels:
    app: website
    tier: web
spec:
  type: NodePort 
  ports:
  - port: 80
    targetPort: 80
    protocol: "TCP"
  selector:
    app: website
    tier: web
