sistema/archivos/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  labels:
    app: bd
    tier: backend
spec:
  ports:
  - port: 3306
    targetPort: 3306
    protocol: "TCP"
  selector:
    app: bd
    tier: backend
