sistema/archivos/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-appweb
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: app.Cmanrique.com 
    http: 
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apache-servicio
            port:
              number: 80
